FIX: alignment on banner image

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -486,6 +486,7 @@ body {
             right: auto;
             margin-top: calc(-100% - 120px);
             max-width: calc(100% - 120px);
+            transform: translateX(100%)!important;
         }
     }
     &--sponsors {
